--- a/client/src/index.css
+++ b/client/src/index.css
@@ -420,3 +420,288 @@ hr {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
 }
+
+
+.wrapper > a {
+  position: absolute;
+  border-radius: 3px;
+  right: 25px;
+  background: #eb315a;
+  font-size: 22px;
+  color: #fff;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+}
+
+  .title-form h1 {
+    font-weight: 700;
+    letter-spacing: -1.5px;
+    margin-top: 20px;
+    font-size: 35px;
+  }
+
+  h1.title-overplay {
+    font-weight: 700;
+    font-size: 35px;
+    line-height: 45px;
+    margin: 0;
+    text-shadow: 0 0 10px rgba(16, 64, 74, 0.5);
+  }
+
+  .tilte-desciptions p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 5px 0 5px 0px;
+    text-shadow: 0 0 10px rgba(16, 64, 74, 0.5);
+  }
+
+
+  .pass-link a {
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+    transition: 0.3s ease-in-out;
+  }
+
+  .pass-link a:hover {
+    color: #eb315a;
+  }
+
+  .pass-link {
+    text-align: right;
+  }
+
+  .btn-form {
+    position: relative;
+    border-radius: 20px;
+    border: 1px solid #eb315a;
+    background-color: #eb315a;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 700;
+    margin: 10px;
+    padding: 12px 80px;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    transition: 0.3s ease-in-out;
+  }
+
+  button:hover {
+    letter-spacing: 3px;
+  }
+
+  button:active {
+    transform: scale(0.95);
+  }
+
+  button:focus {
+    outline: none;
+  }
+
+  button.ghost {
+    background-color: rgba(225, 225, 225, 0.2);
+    border: 2px solid #fff;
+    color: #fff;
+  }
+
+  button.ghost i{
+    position: absolute;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+  }
+
+  button.ghost i.register{
+    right: 70px;
+  }
+
+  button.ghost i.login{
+    left: 70px;
+  }
+
+  button.ghost:hover i.register{
+    right: 40px;
+    opacity: 1;
+  }
+
+  button.ghost:hover i.login{
+    left: 40px;
+    opacity: 1;
+  }
+
+  .form-login-sign {
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
+  }
+
+  .field input {
+    background-color: #eee;
+    border-radius: 10px;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .wrapper {
+    background-color: #fff;
+    border-radius: 25px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    position: absolute;
+    top: 52%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    width: 600px;
+    max-width: 100%;
+    min-height: 340px;
+  }
+
+  .form-container {
+    top: 0;
+    height: 100%;
+    transition: all 0.6s ease-in-out;
+  }
+
+  .login-container {
+    left: 0;
+    z-index: 2;
+  }
+
+  .wrapper.right-panel-active .login-container {
+    transform: translateX(100%);
+  }
+
+  .register-container {
+    left: 0;
+    width: 50%;
+    opacity: 0;
+    z-index: 1;
+  }
+
+  .wrapper.right-panel-active .register-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
+  }
+
+  @keyframes show {
+    0%,
+    49.99% {
+      opacity: 0;
+      z-index: 1;
+    }
+
+    50%,
+    100% {
+      opacity: 1;
+      z-index: 5;
+    }
+  }
+
+  .overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+  }
+
+  .wrapper.right-panel-active .overlay-container {
+    transform: translate(-100%);
+  }
+
+  .overlay {
+    background-image: url('https://images.hdqwalls.com/wallpapers/warcraft-movie.jpg');
+
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+  }
+
+  .overlay::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(
+      to top,
+      rgba(46, 94, 109, 0.4) 40%,
+      rgba(46, 94, 109, 0)
+    );
+  }
+
+  .wrapper.right-panel-active .overlay {
+    transform: translateX(50%);
+  }
+
+  .overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+  }
+
+  .overlay-left {
+    transform: translateX(-20%);
+  }
+
+  .wrapper.right-panel-active .overlay-left {
+    transform: translateX(0);
+  }
+
+  .overlay-right {
+    right: 0;
+    transform: translateX(0);
+  }
+
+  .wrapper.right-panel-active .overlay-right {
+    transform: translateX(20%);
+  }
+
+  .field.success input {
+    border-color: #09c372;
+}
+
+.field.error input {
+    border-color: #ff3860;
+}
+
+.field .error {
+    text-align: left;
+    color: #ff3860;
+    font-size: 12px;
+    height: 13px;
+}
